@@ -27,6 +27,8 @@
         - Fix navigation behaviour for folded subdirectories.
         - Introduce legacy redirects for tutorial links.
         - Improve QueryParam response.
+          entries at the very end that is always available (lerepp).
+        - HintMenu is now based on containerMenu instead of regular menu (lerepp)
 
 0.42 2021-06-18
         - Added GitHub based CI for perl.
